<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intraduction">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-42dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#0A0A0A"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="155dp"
                        android:layout_height="190dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#030303"
                        app:srcCompat="@drawable/im2" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="192dp"
                        android:layout_height="224dp"
                        android:background="#0A0A0A"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="177dp"
                            android:layout_height="37dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="44dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="#F7F7F7"
                            android:text="@string/t1"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:fontFamily="serif" />

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="178dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:background="#F7F7F7"
                            android:text="@string/t2"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:fontFamily="serif" />

                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="#F7F7F7"
                            android:text="@string/t3"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:fontFamily="serif" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/t4"
                android:layout_width="205dp"
                android:layout_height="29dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/t4"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="monospace" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="362dp"
                android:layout_height="105dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/t5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:layout_marginLeft="20dp"
                    android:background="#fcfcfc"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="71dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/t6"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="254dp"
                        android:layout_height="51dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="60dp"
                        android:layout_marginRight="60dp"
                        android:layout_marginBottom="8dp"
                        android:background="#5DC7C7" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t7"
                        android:layout_width="77dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/t7"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t8"
                        android:layout_width="60dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/t8"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t9"
                        android:layout_width="81dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="28dp"
                        android:text="@string/t9"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t10"
                        android:layout_width="71dp"
                        android:layout_height="26dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="148dp"
                        android:layout_marginRight="148dp"
                        android:text="@string/t10"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="401dp"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t11"
                        android:layout_width="73dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/t11"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/t12"
                        android:layout_width="76dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/t12"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/b1"
                android:layout_width="330dp"
                android:layout_height="71dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/b1" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>