<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt2"
                android:textColor="@android:color/black" />

            <RatingBar
                android:id="@+id/rbr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bttn1"
                    android:layout_width="102dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="66dp"
                    android:layout_marginTop="30dp"
                    android:background="#4356F8"
                    android:text="@string/bttn1"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/bttn2"
                    android:layout_width="88dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="30dp"
                    android:background="#4356F8"
                    android:text="@string/bttn2"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>